Blogs registration, login, header, fixes

--- a/client/address.html
+++ b/client/address.html
@@ -13,7 +13,7 @@
                             {{#each countrySearchResults}}
                                 <li role="presentation">
                                     <a href="#" title="{{name}}" class="country-select" >
-                                        <img src="/icons/countries/{{_id}}.png" title="{{name}}" style="height:20px;"/>
+                                        <img src="/icons/countries/{{_id}}.png" alt="{{address.country}}" title="{{name}}" style="height:20px;"/>
                                         {{name}}
                                     </a>
                                 </li>
