--- a/client/authorization.html
+++ b/client/authorization.html
@@ -52,28 +52,38 @@
         <div class="modal fade" id="passwordReset">
         {{#unless currentUser}}
             <div class="modal-dialog">
-                {{#if token}}
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span class="fa fa-close"></span>
-                        </button>
-                        <h4 class="modal-title" id="myModalLabel">Passwort zurücksetzen</h4>
-                    </div>
-                    <form class="form" id="password-reset-form">
-                        <div class="modal-body">
-                            Bitte gib dein neues Passwort ein:
-                            <div class="form-group">
-                                <input type="password" name="password" id="password" class="form-control" value="">
-                                <input type="hidden" name="token" id="token" value="{{token}}">
+                {{#with passwordReset}}
+                    {{#if token}}
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span class="fa fa-close"></span>
+                            </button>
+                            <h4 class="modal-title" id="myModalLabel">
+                                    Passwort {{#if equals type "reset"}}zurück{{/if}}setzen
+                            </h4>
+                        </div>
+                        <form class="form" id="password-reset-form">
+                            <div class="modal-body">
+                                Bitte gib 
+                                {{#if equals type "reset"}}
+                                dein neues
+                                {{else}}
+                                ein 
+                                {{/if}}
+                                Passwort ein:
+                                <div class="form-group">
+                                    <input type="password" name="password" id="password" class="form-control" value="">
+                                    <input type="hidden" name="token" id="token" value="{{token}}">
+                                </div>
                             </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary" id="setPassword">Passwort setzen</button>
-                        </div>
-                    </form>
-                </div>
-                {{/if}}
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-primary" id="setPassword">Passwort setzen</button>
+                            </div>
+                        </form>
+                    </div>
+                    {{/if}}
+                {{/with}}
             </div>
             {{/unless}}
         </div>
