--- a/client/address.html
+++ b/client/address.html
@@ -1,4 +1,4 @@
-<template name="afObjectField_address">
+<template name="ultisiteAddress">
     <label {{bsFieldLabelAtts}}>{{afFieldLabelText name=this.name}}</label>
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
